[package]
name = "team-activity"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[dependencies]
env_logger = "0.5"
iron = "0.6"
log = "0.4"
mount = "0.4"
rand = "0.5"
reqwest = "0.8"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
sqlite = "0.23"
staticfile = "0.5"
time = "0.1"
xml-rs = "0.8"
